# assignment-rag-backend

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: __init__.py  auth.py  calculator.py  check_config.py  extraction.py  main.py  observability.py  rag.py  schemas.py  settings.py  storage.py  worker.py
docs/: PRD.md  QA.md  app-architecture.md  diagram-rag-data-flow.md  diagram-system-architecture.md  diagram-user-journey.md  handoff.md  mongodb-search-index.json  mongodb-vector-index.json  rag_metadata_strategy.md  test_document.md
evals/: README.md  golden_set.json  run_eval.py  test_report.py
samples/: Flashlearn.docx  carsbrand.json  uk_ds_masters - ชีต1.csv
tests/: test_app.py  test_extraction.py
