[project]
name = "poc-rag-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-cloud-storage>=3.12.1",
    "google-genai>=1.0.0",
    "langchain-text-splitters>=1.1.2",
    "markitdown[docx]>=0.1.6",
    "motor>=3.6.0",
    "pydantic-settings>=2.5.0",
    "pyjwt>=2.9.0",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
